--- a/friends/src/App.css
+++ b/friends/src/App.css
@@ -1,5 +1,6 @@
-.App {
-  text-align: center;
+body {
+ /* background-color: #282c34; */
+
 }
 
 .App-logo {
@@ -35,4 +36,96 @@
   to {
     transform: rotate(360deg);
   }
+
+  
+
+}
+
+.app-maindiv {
+    display: flex;
+    justify-content: right;
+}
+
+
+ h1 {
+   text-align: center;
+   color: rgb(17, 98, 248);
+   font-family: cursive;
+ }
+
+ .links {
+   width: 700px;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   margin-right: 20px;
+ }
+
+ .link {
+   text-decoration: none;
+   font-family: 'Itim', cursive;
+   color: rgb(17, 98, 248);
+   font-size: 22px;
+ }
+
+ .friend-list {
+   display: flex;
+   flex-direction: column;
+   border: palevioletred solid 1px;
+   border-radius: 7px;
+   padding: 10px;
+   margin: 20px;
+   width: 500px;
+   background-color: #8de0f7;
+}
+
+.list-button {
+  width: 100px;
+  height: 30px;
+  margin: 10px;
+  background-color: rgb(30, 160, 241);
+  border: none;
+  color: blue;
+  font-size: 20px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  border-radius: 5px;
+}
+
+.list-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #e6f3f7;
+}
+
+.list-div p {
+  font-family: 'Itim', cursive;
+  font-size: 20px;
+}
+
+.list-div h2 {
+  font-family: 'Itim', cursive;
+  font-size: 30px;
+  color: #16346e;
+}
+
+.addlist-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.add-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  line-height: 50px;
+}
+
+.add-element {
+  font-family: 'Itim', cursive;
+  font-size: 20px;
 }
